ferrolearn-core/tests/ui/predict_unfitted_linear.stderr
error[E0599]: no method named `predict` found for struct `LinearRegression<F>` in the current scope
  --> tests/ui/predict_unfitted_linear.rs:11:19
   |
11 |     let _ = model.predict(&x);
   |                   ^^^^^^^ method not found in `LinearRegression<f64>`
